...
                                        )
                                    )
                                }
                            }
                        )
                    },
                    modifier = Modifier.testTag("AutoLocation_Switch")
                )
            }

            Spacer(modifier = Modifier.height(8.dp))

            OutlinedTextField(
...
                            color = MaterialTheme.colorScheme.error
                        )
                    }
                },
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("Latitude_TextField"),
                shape = MaterialTheme.shapes.medium,
                keyboardOptions = KeyboardOptions.Default.copy(
                    keyboardType = KeyboardType.Decimal,
                    imeAction = ImeAction.Next
                ),
                keyboardActions = KeyboardActions(
...
                            color = MaterialTheme.colorScheme.error
                        )
                    }
                },
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("Longitude_TextField"),
                shape = MaterialTheme.shapes.medium,
                keyboardOptions = KeyboardOptions.Default.copy(
                    keyboardType = KeyboardType.Decimal,
                    imeAction = ImeAction.Done
                ),
                keyboardActions = KeyboardActions(
...
            }

            Button(
                onClick = { onAction(WeatherScreenAction.FetchWeatherScreen) },
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("FetchWeather_Button"),
                shape = MaterialTheme.shapes.medium,
                enabled = isFetchButtonEnabled
            ) {
                Text(text = stringResource(R.string.fetch_weather))
            }

...
            )
        }
    }

    @Composable
    fun CurrentWeatherLayout(currentWeather: CurrentWeather) {
        Column(modifier = Modifier.testTag("CurrentWeather_Container")) {
            Text(
                text = stringResource(R.string.current_weather),
                style = MaterialTheme.typography.titleLarge,
                modifier = Modifier.testTag("CurrentWeather_Title")
            )
            Card(
...
            }
        }
    }

    @Composable
    fun WeeklyForecastLayout(weeklyForecast: ImmutableList<DailyWeather>) {
        Column(modifier = Modifier.testTag("WeeklyForecast_Container")) {
            Text(
                text = stringResource(R.string.weekly_forecast),
                style = MaterialTheme.typography.titleLarge,
                modifier = Modifier.testTag("WeeklyForecast_Title")
            )
            LazyColumn(
...

    @Composable
    fun WeeklyForecastItem(dailyWeather: DailyWeather) {
        Card(
            modifier = Modifier
                .fillMaxWidth()
                .testTag("WeeklyForecast_Item"),
            elevation = CardDefaults.cardElevation()
        ) {
            Column(modifier = Modifier.padding(16.dp)) {
                Text(text = stringResource(R.string.date, dailyWeather.date))
                Text(text = stringResource(R.string.max_temp_c, dailyWeather.temperatureMax))
                Text(text = stringResource(R.string.min_temp_c, dailyWeather.temperatureMin))
...
