...
                                    drawerState.open()
                                }
                            }
                        ) {
                            Icon(
                                imageVector = Icons.Default.Menu,
                                contentDescription = "Menu toggle icon"
                            )
                        }
                    }
                )
            }
        ) { paddingValues ->
...
